# turfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
examples/: CMakeLists.txt
examples/android_read_test/: CMakeLists.txt  android_native_app_glue.c  android_native_app_glue.h  android_read_test.c
examples/android_read_test/assets/: read_this.txt
examples/read_test/: CMakeLists.txt  read_test.c
examples/read_test/assets/: read_this.txt
examples/test1/: CMakeLists.txt  test1.c
include/: turfs.h  turfs_version.h
scripts/cmake/toolchains/: toolchain.android.cmake
src/: internal.h  turfs_android.c  turfs_common.c  turfs_file_android.c  turfs_file_stdio.c  turfs_osx.c  turfs_strings.c  turfs_unix.c  turfs_version.c.in  turfs_windows.c
